<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcomeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_logon"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/infoHeader"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/info_logon"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <EditText
        android:id="@+id/discordTokenInput"
        android:layout_width="329dp"
        android:layout_height="40dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/dsc_token"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.177" />

    <Button
        android:id="@+id/experimentalButton"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:text="@string/experimental_logon"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#E9E9E9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271" />

    <Button
        android:id="@+id/signInButton"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#E9D3D3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />
</androidx.constraintlayout.widget.ConstraintLayout>